# witnesscalc

./: CMakeLists.txt  Makefile  README.md  build_gmp.sh
cmake/: platform.cmake
src/: CMakeLists.txt  witnesscalc_template.cpp  witnesscalc_template.h
